style.css
:root {
    --bg-color: #1A2A33;
    --bg-semi-dark: #1F3641;
    --bg-silver: #A8BFC9;
    --bg-yellow: #F2B137;
    --bg-yellow-hover: #FFC860;
    --bg-light-blue: #31C3BD;
    --bg-light-blue-hover: #65E9E4;
}

html {
    box-sizing: border-box;
    background-color: var(--bg-color);
    font-family: 'Outfit', sans-serif;
    height: 100vh;
}

*,
*::before,
*::after {
    box-sizing: inherit;
}

* {
    margin: 0;
}

img {
    display: block;
    width: 100%;
}

button {
    font: inherit;
}

p,
h1,
h2,
h3,
h4,
h5,
h6 {
    overflow-wrap: break-word;
}

main {
    padding: 1.5rem;
    display: flex;
    align-items: center;
    justify-content: center;
    /* below for darkening when results screen comes up */
    /* height: 100vh; */
    /* background: #000; */
    /* opacity: .5; */
}

.new-game-menu {
    display: none;
    justify-items: center;
    text-align: center;
    grid-gap: 2rem;
}

.menu-header {
    width: clamp(4.5rem, 4.324rem + 0.751vw, 5rem);
    height: 2rem;
    margin-top: 7.44rem;
}

.menu-mark-container {
    background-color: var(--bg-semi-dark);
    padding: 1.5rem;
    box-shadow: 0px -8px 0px 0px #10212A inset;
    border-radius: 0.9375rem;
    margin-bottom: 2.5rem;
}

.menu-mark-prompt {
    color: var(--bg-silver);
    text-transform: uppercase;
    font-size: 1rem;
    letter-spacing: .0625rem;
    font-weight: 700;
}

.menu-mark-container p {
    color: var(--bg-silver);
    opacity: .5;
    text-transform: uppercase;
    font-size: .875rem;
    letter-spacing: 0.05469rem;
}

.menu-icon-button-wrapper {
    display: grid;
    grid-template-columns: 1fr 1fr;
    align-items: center;
    margin-top: 1.5rem;
    border-radius: 0.625rem;
    height: 4.5rem;
    background-color: var(--bg-color);
    margin-bottom: 1rem;
    padding: .5rem;
}

.x-choice {
    display: grid;
    align-items: center;
    justify-items: center;
    height: 3.375rem;
    border-radius: 0.625rem;
    background: transparent;
    border: none;
}

.x-choice:hover {
    cursor: pointer;
    background-color: var(--bg-semi-dark);
}

.o-choice {
    height: 3.375rem;
    background-color: var(--bg-silver);
    border: none;
    border-radius: 0.625rem;
    display: grid;
    align-items: center;
    justify-content: center;
}

.o-choice:hover {
    cursor: pointer;
}

.new {
    width: 100%;
    height: 3.5rem;
    border-radius: 0.9375rem;
    border: none;
    font-size: 1rem;
    font-weight: 700;
    letter-spacing: 0.0625rem;
    text-transform: uppercase;
    text-align: center;
}

.new.vs-cpu {
    margin-bottom: 1.25rem;
    background-color: var(--bg-yellow);
    box-shadow: 0px -8px 0px 0px #CC8B13 inset;
}

.new.vs-cpu:hover {
    background-color: var(--bg-yellow-hover);
    cursor: pointer;
}

.new.vs-player {
    background-color: var(--bg-light-blue);
    box-shadow: 0px -8px 0px 0px #118C87 inset;
}

.new.vs-player:hover {
    background-color: var(--bg-light-blue-hover);
    cursor: pointer;
}

.in-game {
    display: none;
    grid-gap: 4rem;
}

.game-header {
    display: grid;
    grid-template-columns: repeat(3, 6rem);
    grid-gap: 1.25rem;
    align-items: center;
}

.game-xo {
    width: 4.5rem;
}

.game-turn {
    height: 2.5rem;
    display: flex;
    justify-content: space-around;
    align-items: center;
    background-color: var(--bg-semi-dark);
    font-size: 0.875rem;
    font-weight: 700;
    letter-spacing: 0.05469rem;
    text-transform: uppercase;
    color: var(--bg-silver);
    border: none;
    border-radius: 0.3125rem;
    box-shadow: 0px -4px 0px 0px #10212A inset;
}

.x-svg {
    display: none;
}

.o-svg {
    display: none;
}

.restart {
    justify-self: end;
    background-color: var(--bg-silver);
    border-radius: 0.625rem;
    border: none;
    box-shadow: 0px -4px 0px 0px #6B8997 inset;
    width: 2.5rem;
    height: 2.5rem;
    display: flex;
    align-items: center;
    justify-content: center;
}

.restart>img {
    width: 65%;
}

.game-board {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-gap: 1.25rem;
}

.board-cell {
    width: 6rem;
    height: 6rem;
    background-color: var(--bg-semi-dark);
    padding: 1.7rem;
    border: none;
    border-radius: 0.625rem;
    box-shadow: 0px -8px 0px 0px #10212A inset;

}

.game-state {
    display: flex;
    justify-content: space-between;
}

.score {
    width: 6rem;
    height: 4rem;
    text-align: center;
    border-radius: 0.9375rem;
    padding: .5rem;
    text-transform: uppercase;
    font-size: 0.875rem;
    letter-spacing: 0.05469rem;
    color: var(--bg-color);
}

.score.x-score {
    background-color: var(--bg-light-blue);
}

.score.ties-score {
    background-color: var(--bg-silver);
}

.score.o-score {
    background-color: var(--bg-yellow);
}

.game-state-x-score,
.game-state-ties-score,
.game-state-o-score {
    font-size: 1.25rem;
    font-weight: 700;
    letter-spacing: 0.07813rem;
}

.game-over {
    display: none;
    height: 14rem;
    width: 100%;
    position: absolute;
    top: 25%;
    text-align: center;
    text-transform: uppercase;
    background-color: var(--bg-semi-dark);
}

.game-result-icon-winner {
    display: flex;
    align-items: center;
    justify-content: center;
    gap: .5rem;
}

.game-result-icon-winner>img {
    width: auto;
    height: 1.875rem;
}

.visible {
    display: grid;
}

@media (min-width: 768px) {
    main {
        height: 100vh;
        margin-top: 0;
        margin-bottom: 0;
    }
}

